--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 }
 
 @font-face {
-    font-family: 'ulsanjunggu';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/ulsanjunggu.woff2') format('woff2');
+    font-family: 'OTEnjoystoriesBA';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/OTEnjoystoriesBA.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -205,10 +205,44 @@ body {
     display: none;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 50px;
-    
+    margin-top: 100px;
 }
 
 .result .result_wrap{
     font-size: 20px;
+}
+
+.result span {
+    padding: 0 20px;
+    font-family: 'GmarketSansMedium';
+    font-weight: bold;
+    font-size:70px;
+}
+
+.result .result_buttons{
+    
+    padding:100px
+}
+
+.result .result_buttons button{
+    width: 220px;
+    height: 56px;
+    border-radius: 50px;
+    border:none;
+    background-color: white;
+    font-size:20px;
+    font-family: 'GmarketSansMedium';
+    font-weight: bold;
+    color: #5B2386;
+    cursor: pointer;
+    margin-left: 20px;
+    margin-right: 30px;
+}
+
+
+#coopyright p{
+    text-align: center;
+    padding : 80px
+    
+    
 }
